--- a/src/app/core/layout/inner-pages/chats/agent-live/agent-live.component.css
+++ b/src/app/core/layout/inner-pages/chats/agent-live/agent-live.component.css
@@ -228,7 +228,10 @@ ul.super-sub li:hover{background: #e1e3e9;}
 
 .messageHeading{
   text-align: center;
-  margin-top: -50px;
+  margin-top: -15px;
+}
+.messageHeading h3{
+  padding-top: 10px;
 }
 .chat-list2 ul li .chat-content h3{
   margin: 5px 0 0 0;
@@ -239,6 +242,11 @@ ul.super-sub li:hover{background: #e1e3e9;}
   display: block;
   width: 100%;
   padding-top: 5px;
+}
+
+.headerSearch {
+  display: inline-block;
+  width: 100%;
 }
 
 @media screen and (max-width: 991px){
@@ -281,8 +289,6 @@ ul.super-sub li:hover{background: #e1e3e9;}
   height: 200px;
   width: 200px;
 }
-
-
 
 
 
